v1.1.0 - Input and Style Rework